# appfollow_test

./: .gitignore  Makefile  pyproject.toml
news_parser/: api.py  get_news.py  news.py  settings.py
news_parser/scripts/: main.py
