[tool.poetry]
name = "apfollow_test"
version = "0.1.0"
description = ""
authors = ["Daria Kharitonova <kharitonovadari@gmail.com>"]
packages = [
    { include = "news_parser"}
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
webargs = "^7.0.1"
pytest = "^6.2.2"
pytest-flask-sqlalchemy = "^1.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
lxml = "^4.6.2"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
apscheduler = "^3.6.3"

[tool.poetry.scripts]
hacker_news = 'news_parser.scripts.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
